--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.7",
+    "kagglehub>=0.3.12",
     "matplotlib>=3.10.0",
     "numpy>=2.2.2",
     "pycocotools>=2.0.8",
@@ -13,4 +15,5 @@ dependencies = [
     "seaborn>=0.13.2",
     "torch>=2.6.0",
     "torchvision>=0.21.0",
+    "ultralytics>=8.3.131",
 ]
